# sonic-swss-common

./: Makefile.am
debian/: control  sonic-db-rec.install
sonic-db-rec/: Makefile.am  sonic-db-rec.cpp  sonic-db-rec.h
